--- a/src/app/componentes/administrador/deshabilitados/deshabilitados.component.html
+++ b/src/app/componentes/administrador/deshabilitados/deshabilitados.component.html
@@ -1,51 +1,32 @@
 <div class="p-4">
   <h2 class="text-xl font-bold mb-4 text-center">Formularios No Disponibles</h2>
-  <div class="overflow-x-auto">
-    <table class="min-w-full divide-y divide-gray-200 shadow-sm">
-      <thead class="bg-gray-50">
+  <div class="table-responsive">
+    <table id="formulariosTable" class="table table-striped">
+      <thead class="thead-light">
         <tr>
-          <th
-            scope="col"
-            class="w-1/4 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider align-middle"
-          >
-            Nombre
-          </th>
-          <th
-            scope="col"
-            class="w-1/2 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider align-middle"
-          >
-            Descripción
-          </th>
-          <th
-            scope="col"
-            class="w-1/4 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider align-middle"
-          >
-            Acciones
-          </th>
+          <th scope="col" class="text-center">Nombre</th>
+          <th scope="col" class="text-center">Descripción</th>
+          <th scope="col" class="text-center">Acciones</th>
         </tr>
       </thead>
-      <tbody class="bg-white divide-y divide-gray-200">
+      <tbody>
         <tr *ngFor="let formulario of formularios">
-          <td class="px-6 py-4 align-middle">
-            <div class="text-sm text-gray-900">{{ formulario.formname }}</div>
-          </td>
-          <td class="px-6 py-4 align-middle">
-            <div class="text-sm text-gray-500">
-              {{ formulario.description }}
-            </div>
-          </td>
-          <td class="px-6 py-4 align-middle text-sm font-medium">
+          <td class="align-middle">{{ formulario.formname }}</td>
+          <td class="align-middle">{{ formulario.description }}</td>
+          <td class="align-middle">
             <button
               (click)="editarFormulario(formulario)"
-              class="px-4 py-2 rounded-md text-sm font-medium text-indigo-600 hover:text-indigo-900 bg-indigo-100 hover:bg-indigo-200 transition-colors"
+              class="btn btn-primary btn-sm mr-2"
+              title="Editar"
             >
-              Editar
+              <i class="fas fa-edit"></i>
             </button>
             <button
               (click)="habilitarFormulario(formulario)"
-              class="ml-4 px-4 py-2 rounded-md text-sm font-medium text-green-600 hover:text-green-900 bg-green-100 hover:bg-green-200 transition-colors"
+              class="btn btn-success btn-sm"
+              title="Habilitar"
             >
-              Habilitar
+              <i class="fas fa-check"></i>
             </button>
           </td>
         </tr>
