--- a/src/app/componentes/administrador/habilitados/habilitados.component.html
+++ b/src/app/componentes/administrador/habilitados/habilitados.component.html
@@ -1,53 +1,36 @@
 <div class="p-4">
   <h2 class="text-xl font-bold mb-4 text-center">Formularios Habilitados</h2>
-  <div class="overflow-x-auto">
-    <table class="min-w-full divide-y divide-gray-200 shadow-sm">
+  <div class="table-responsive">
+    <table
+      id="formulariosTable"
+      class="table table-striped table-bordered"
+      style="width: 100%"
+    >
       <thead class="bg-gray-50">
         <tr>
-          <th
-            scope="col"
-            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-          >
-            Nombre
-          </th>
-          <!-- Nueva columna Descripción -->
-          <th
-            scope="col"
-            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-          >
-            Descripción
-          </th>
-          <th
-            scope="col"
-            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
-          >
-            Acciones
-          </th>
+          <th>Nombre</th>
+          <th>Descripción</th>
+          <th>Acciones</th>
         </tr>
       </thead>
-      <tbody class="bg-white divide-y divide-gray-200">
+      <tbody>
         <tr *ngFor="let formulario of formularios">
-          <td class="px-6 py-4 whitespace-nowrap">
-            <div class="text-sm text-gray-900">{{ formulario.formname }}</div>
-          </td>
-          <!-- Celda para Descripción -->
-          <td class="px-6 py-4 whitespace-nowrap">
-            <div class="text-sm text-gray-500">
-              {{ formulario.description }}
-            </div>
-          </td>
-          <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
+          <td>{{ formulario.formname }}</td>
+          <td>{{ formulario.description }}</td>
+          <td>
             <button
               (click)="editarFormulario(formulario)"
-              class="px-4 py-2 rounded-md text-sm font-medium text-indigo-600 hover:text-indigo-900 bg-indigo-100 hover:bg-indigo-200 transition-colors"
+              class="btn btn-primary btn-sm"
+              title="Editar"
             >
-              Editar
+              <i class="fas fa-edit"></i>
             </button>
             <button
               (click)="deshabilitarFormulario(formulario)"
-              class="ml-4 px-4 py-2 rounded-md text-sm font-medium text-red-600 hover:text-red-900 bg-red-100 hover:bg-red-200 transition-colors"
+              class="btn btn-danger btn-sm"
+              title="Deshabilitar"
             >
-              Deshabilitar
+              <i class="fas fa-trash-alt"></i>
             </button>
           </td>
         </tr>
