--- a/src/app/componentes/administrador/layout-admin/layout-admin.component.html
+++ b/src/app/componentes/administrador/layout-admin/layout-admin.component.html
@@ -1,46 +1,47 @@
-<div class="flex">
-  <div class="min-h-screen bg-brand-light shadow-lg">
-    <div class="px-6 py-8">
-      <h3 class="text-xl text-brand-gray font-bold mb-4">Menú</h3>
-      <div class="space-y-2">
-        <button
-          (click)="toggleFormOptions()"
-          class="text-brand-blue hover:text-blue-700 font-semibold py-2 w-full text-left"
-        >
-          Formularios
-        </button>
-        <div *ngIf="isFormOptionsVisible" class="pl-4 space-y-2">
-          <a
-            [routerLink]="['/administrador/formularioshabilitados/']"
-            class="block text-sm text-brand-gray hover:text-blue-700"
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-2 px-0">
+      <div class="min-vh-100 bg-light shadow-lg p-4">
+        <h3 class="text-xl text-muted font-weight-bold mb-4">Menú</h3>
+        <div class="list-group">
+          <button
+            (click)="toggleFormOptions()"
+            class="list-group-item list-group-item-action text-primary font-weight-bold"
           >
-            Habilitados
-          </a>
-          <a
-            [routerLink]="['/administrador/formulariosdeshabilitados/']"
-            class="block text-sm text-brand-gray hover:text-blue-700"
-          >
-            Deshabilitados
-          </a>
-          <a
-            [routerLink]="['/administrador/crear-formulario/']"
-            class="block text-sm text-brand-gray hover:text-blue-700"
-          >
-            Crear formulario
-          </a>
+            Formularios
+          </button>
+          <div *ngIf="isFormOptionsVisible" class="pl-4">
+            <a
+              [routerLink]="['/administrador/formularioshabilitados/']"
+              class="list-group-item list-group-item-action"
+              >Habilitados</a
+            >
+            <a
+              [routerLink]="['/administrador/formulariosdeshabilitados/']"
+              class="list-group-item list-group-item-action"
+              >Deshabilitados</a
+            >
+            <a
+              [routerLink]="['/administrador/crear-formulario/']"
+              class="list-group-item list-group-item-action"
+              >Crear formulario</a
+            >
+            <a
+              [routerLink]="['/administrador/actividades/']"
+              class="list-group-item list-group-item-action"
+              >Actividades</a
+            >
+          </div>
         </div>
         <!-- Botón de Cierre de Sesión -->
-        <button
-          (click)="logout()"
-          class="mt-4 text-brand-blue hover:text-blue-700 font-semibold py-2 w-full text-left"
-        >
+        <button (click)="logout()" class="btn btn-primary mt-4 btn-block">
           Cerrar Sesión
         </button>
       </div>
     </div>
-  </div>
 
-  <div class="flex-1">
-    <router-outlet></router-outlet>
+    <div class="col-md-9">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
