--- a/src/app/componentes/autenticacion/login/login.component.html
+++ b/src/app/componentes/autenticacion/login/login.component.html
@@ -1,74 +1,90 @@
-<div class="flex items-center justify-center min-h-screen bg-brand-light">
-  <div class="w-full max-w-md px-6 py-8 bg-white rounded-2xl shadow-lg">
-    <h2 class="text-center text-2xl text-brand-gray font-bold mb-8">
-      Iniciar sesión
-    </h2>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-4">
+<div class="container">
+  <div class="row justify-content-center align-items-center min-vh-100">
+    <div class="col-md-6">
       <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
+        class="card shadow-lg p-4 rounded"
+        style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)"
       >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
+        <div class="card-body">
+          <div
+            *ngIf="loginMessage"
+            class="alert alert-{{ loginMessage.type }}"
+            role="alert"
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M16 11V7a4 4 0 00-8 0v4m4 5a4 4 0 100-8 4 4 0 000 8z"
-            />
-          </svg>
-        </span>
-        <input
-          type="email"
-          id="email"
-          formControlName="email"
-          class="w-full p-2 rounded-r-md"
-          placeholder="ejemplo@correo.com"
-        />
-      </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
+            {{ loginMessage.text }}
+          </div>
+          <h2 class="text-center text-primary mb-4">¡Bienvenido de vuelta!</h2>
+          <form
+            [formGroup]="loginForm"
+            (ngSubmit)="onSubmit()"
+            class="needs-validation"
+            novalidate
           >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M16 11V7a4 4 0 00-8 0v4m4 5a4 4 0 100-8 4 4 0 000 8z"
-            />
-          </svg>
-        </span>
-        <input
-          type="password"
-          id="password"
-          formControlName="password"
-          class="w-full p-2 rounded-r-md"
-          placeholder="Ingresa tu contraseña"
-        />
+            <div class="mb-3">
+              <label for="email" class="form-label">Correo electrónico</label>
+              <div class="input-group">
+                <span class="input-group-text">
+                  <i class="fas fa-envelope"></i>
+                </span>
+                <input
+                  type="email"
+                  id="email"
+                  formControlName="email"
+                  class="form-control rounded-end"
+                  placeholder="Correo electrónico"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Por favor, ingresa un correo electrónico válido.
+                </div>
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-label">Contraseña</label>
+              <div class="input-group">
+                <span class="input-group-text">
+                  <i class="fas fa-key"></i>
+                </span>
+                <input
+                  type="password"
+                  id="password"
+                  formControlName="password"
+                  class="form-control rounded-end"
+                  placeholder="Contraseña"
+                  required
+                />
+                <div class="invalid-feedback">
+                  Por favor, ingresa tu contraseña.
+                </div>
+              </div>
+            </div>
+            <div class="mb-3 form-check">
+              <input type="checkbox" class="form-check-input" id="rememberMe" />
+              <label class="form-check-label" for="rememberMe"
+                >Recordarme</label
+              >
+            </div>
+            <button
+              type="submit"
+              class="btn btn-primary w-100"
+              [disabled]="loginForm.invalid"
+            >
+              Iniciar sesión
+            </button>
+          </form>
+          <div class="mt-3 text-center">
+            <p class="mb-1">
+              <a href="#" class="text-decoration-none">
+                ¿Olvidaste tu contraseña?
+              </a>
+            </p>
+            <p class="mb-0">
+              ¿No tienes una cuenta?
+              <a href="/registro" class="text-decoration-none">Regístrate</a>
+            </p>
+          </div>
+        </div>
       </div>
-      <button
-        type="submit"
-        class="w-full bg-brand-blue text-white p-3 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 disabled:opacity-50"
-        [disabled]="loginForm.invalid"
-      >
-        Iniciar sesión
-      </button>
-    </form>
-    <p class="mt-6 text-sm text-center text-brand-gray">
-      ¿No tienes una cuenta?
-      <a href="/registro" class="text-brand-blue hover:text-blue-700"
-        >Regístrate</a
-      >
-    </p>
+    </div>
   </div>
 </div>
