--- a/src/app/componentes/autenticacion/registro/registro.component.html
+++ b/src/app/componentes/autenticacion/registro/registro.component.html
@@ -1,175 +1,100 @@
-<div class="flex items-center justify-center min-h-screen bg-brand-light">
-  <div class="w-full max-w-sm px-6 py-8 bg-white rounded-2xl shadow-lg">
-    <h2 class="text-center text-2xl text-brand-gray font-bold mb-8">
+<div
+  class="d-flex align-items-center justify-content-center min-vh-100 bg-light"
+>
+  <div class="form-group">
+    <label *ngIf="mensajeRegistro" class="text-success">{{
+      mensajeRegistro
+    }}</label>
+  </div>
+  <div class="w-25 w-md-50 px-4 py-5 bg-white rounded-3 shadow-lg">
+    <h2 class="text-center text-2xl text-secondary font-weight-bold mb-4">
       Registro
     </h2>
     <form [formGroup]="registroForm" (ngSubmit)="onSubmit()" class="space-y-4">
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M12 11c1.657 0 3-1.343 3-3s-1.343-3-3-3-3 1.343-3 3 1.343 3 3 3zm0 2c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm0 2c2.21 0 4 1.79 4 4H8c0-2.21 1.79-4 4-4z"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-id-card"></i>
         </span>
         <input
           type="text"
           id="cedula"
           formControlName="cedula"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Cédula"
         />
       </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M17 20h5v-2a3 3 0 00-5.356-1.857M6 13V5a2 2 0 012-2h3.586a1 1 0 01.707.293l2.414 2.414a1 1 0 00.707.293H20a2 2 0 012 2v6a2 2 0 01-2 2H6z"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-user"></i>
         </span>
         <input
           type="text"
           id="nombres"
           formControlName="nombres"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Nombres"
         />
       </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M17 20h5v-2a3 3 0 00-5.356-1.857M6 13V5a2 2 0 012-2h3.586a1 1 0 01.707.293l2.414 2.414a1 1 0 00.707.293H20a2 2 0 012 2v6a2 2 0 01-2 2H6z"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-user"></i>
         </span>
         <input
           type="text"
           id="apellidos"
           formControlName="apellidos"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Apellidos"
         />
       </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fillRule="evenodd"
-              d="M18 8a6 6 0 11-12 0 6 6 0 0112 0zM2 13a9 9 0 1118 0H2z"
-              clipRule="evenodd"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-user"></i>
         </span>
         <input
           type="text"
           id="username"
           formControlName="username"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Nombre de Usuario"
         />
       </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M16 11V7a4 4 0 00-8 0v4m4 5a4 4 0 100-8 4 4 0 000 8z"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-lock"></i>
         </span>
         <input
           type="password"
           id="password"
           formControlName="password"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Contraseña"
         />
       </div>
-      <div
-        class="flex items-center border border-gray-300 rounded-md shadow-sm"
-      >
-        <span class="p-2">
-          <svg
-            class="h-5 w-5 text-gray-500"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              strokeLinecap="round"
-              strokeLinejoin="round"
-              strokeWidth="2"
-              d="M16 12a4 4 0 11-8 0 4 4 0 018 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9h4"
-            />
-          </svg>
+      <div class="input-group">
+        <span class="input-group-text">
+          <i class="fas fa-envelope"></i>
         </span>
         <input
           type="email"
           id="email"
           formControlName="email"
-          class="w-full p-2 rounded-r-md"
+          class="form-control"
           placeholder="Correo Electrónico"
         />
       </div>
       <button
         type="submit"
-        class="w-full bg-brand-blue text-white p-3 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 disabled:opacity-50"
+        class="btn btn-primary w-100 mt-3"
         [disabled]="registroForm.invalid"
       >
         Registrarse
       </button>
     </form>
-    <div class="mt-6 text-center">
-      <a href="/login" class="text-brand-blue hover:text-blue-700">
-        ¿Ya tienes una cuenta? Inicia sesión
-      </a>
+    <div class="mt-4 text-center">
+      <a href="/login" class="text-primary"
+        >¿Ya tienes una cuenta? Inicia sesión</a
+      >
     </div>
   </div>
 </div>
