Recuperar contraseña, número decimales en un formulario, subir plantilla actualizada

--- a/src/app/componentes/administrador/layout-admin/layout-admin.component.html
+++ b/src/app/componentes/administrador/layout-admin/layout-admin.component.html
@@ -22,6 +22,11 @@
               >Deshabilitados</a
             >
             <a
+              [routerLink]="['/administrador/plantillas/']"
+              class="list-group-item list-group-item-action"
+              >Plantillas</a
+            >
+            <a
               [routerLink]="['/administrador/crear-formulario/']"
               class="list-group-item list-group-item-action"
               >Crear formulario</a
