--- a/src/app/componentes/autenticacion/login/login.component.html
+++ b/src/app/componentes/autenticacion/login/login.component.html
@@ -74,7 +74,7 @@
           </form>
           <div class="mt-3 text-center">
             <p class="mb-1">
-              <a href="#" class="text-decoration-none">
+              <a href="/olvidar-contraseña" class="text-decoration-none">
                 ¿Olvidaste tu contraseña?
               </a>
             </p>
