--- a/src/app/componentes/administrador/crear-formulario/crear-formulario.component.html
+++ b/src/app/componentes/administrador/crear-formulario/crear-formulario.component.html
@@ -1,6 +1,18 @@
 <div class="container mt-5">
-  <div *ngIf="mensaje" class="alert alert-{{ mensaje.type }}" role="alert">
-    {{ mensaje.text }}
+  <div
+    *ngIf="mensaje"
+    class="alert alert-{{
+      mensaje.type
+    }} d-flex justify-content-between align-items-center"
+    role="alert"
+  >
+    <span>{{ mensaje.text }}</span>
+    <button
+      type="button"
+      class="btn-close btn-close-custom"
+      aria-label="Cerrar"
+      (click)="cerrarMensaje()"
+    ></button>
   </div>
   <div class="row justify-content-center">
     <div class="col-lg-8">
