--- a/src/app/componentes/administrador/deshabilitados/deshabilitados.component.html
+++ b/src/app/componentes/administrador/deshabilitados/deshabilitados.component.html
@@ -28,6 +28,14 @@
             >
               <i class="fas fa-check"></i>
             </button>
+
+            <button
+              class="btn btn-danger btn-sm"
+              (click)="eliminarFormulario(formulario)"
+              title="Eliminar"
+            >
+              <i class="fas fa-trash"></i>
+            </button>
           </td>
         </tr>
       </tbody>
