--- a/src/app/componentes/administrador/plantillas/plantillas.component.html
+++ b/src/app/componentes/administrador/plantillas/plantillas.component.html
@@ -44,6 +44,13 @@
             >
               <i class="fas fa-upload"></i>
             </button>
+            <button
+              class="btn btn-danger btn-sm"
+              (click)="eliminarPlantilla(plantilla)"
+              title="Eliminar"
+            >
+              <i class="fas fa-trash"></i>
+            </button>
           </td>
         </tr>
       </tbody>
